--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Music Player</string>
+    <string name="buffuring">Buffuring...</string>
+    <string name="zoro_secs">00:00</string>
 </resources>
